# era-zk_evm_abstractions

./: .gitignore  Cargo.toml
src/: auxiliary.rs  lib.rs  queries.rs  vm.rs
src/precompiles/: ecrecover.rs  keccak256.rs  mod.rs  secp256r1_verify.rs  sha256.rs
