[package]
name = "zk_evm_abstractions"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
static_assertions = "1"

# zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.5.0" }
zkevm_opcode_defs = { path = "../era-zkevm_opcode_defs" }

[dev-dependencies]
hex = "0.4"
